--- a/dev/Manisero.DSLExecutor.WebApp/Views/Shared/_Layout.cshtml
+++ b/dev/Manisero.DSLExecutor.WebApp/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Manisero.DSLExecutor.WebApp</title>
+    <title>DSLExecutor Playground</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -24,15 +24,13 @@
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
                 </button>
-                <a asp-controller="Home" asp-action="Index" class="navbar-brand">Manisero.DSLExecutor.WebApp</a>
+                <a asp-controller="Home" asp-action="Index" class="navbar-brand">DSLExecutor Playground</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +39,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2016 - Manisero.DSLExecutor.WebApp</p>
+            <p>&copy; 2016 <a href="http://manisero.net/">manisero</a></p>
         </footer>
     </div>
 
