--- a/dev/Manisero.DSLExecutor.WebApp/Views/Shared/_Layout.cshtml
+++ b/dev/Manisero.DSLExecutor.WebApp/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-controller="About" asp-action="Index">About</a></li>
                 </ul>
             </div>
         </div>
