--- a/dev/Manisero.DSLExecutor.WebApp/Views/Home/Index.cshtml
+++ b/dev/Manisero.DSLExecutor.WebApp/Views/Home/Index.cshtml
@@ -1,13 +1,8 @@
-﻿<div class="row">
-    <div class="col-md-5">
-        <h2>Input</h2>
-        <input type="text" />
-    </div>
-    <div class="col-md-2">
-        <input type="button" value="Run" />
-    </div>
-    <div class="col-md-5">
-        <h2>Output</h2>
-        <div>output...</div>
-    </div>
-</div>
+﻿@section scripts {
+    <script src="https://fb.me/react-15.0.2.js"></script>
+    <script src="https://fb.me/react-dom-15.0.2.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <script type="text/babel" src="~/js/home.jsx"></script>
+}
+
+<div id="body"></div>
