Filled About page

--- a/dev/Manisero.DSLExecutor.WebApp/Views/About/Index.cshtml
+++ b/dev/Manisero.DSLExecutor.WebApp/Views/About/Index.cshtml
@@ -1,4 +1,1 @@
-﻿<h2>About.</h2>
-<h3>About.</h3>
-
-<p>About.</p>
+﻿<h3>Please visit the <a href="http://manisero.net/dslexecutor/" target="_blank">project site</a> [PL].</h3>
